# ezmsg-tasks

./: README.md  pyproject.toml
src/ezmsg/tasks/: __init__.py  centerouttask.py  cuedactiontask.py  directory.py  feedbacktask.py  frequencymapper.py  task.py
src/ezmsg/tasks/ssvep/: multi_stim_task.py  stimulus.py  task.py
